# deep-learning-models

./: .gitignore  README.md  UPLOAD_FROM_LOCAL.md
CNN/: .gitignore  README.md  pyproject.toml  requirements.txt
CNN/.github/workflows/: tests.yml
CNN/cnn/: __init__.py  data.py  engine.py  evaluate.py  model.py  predict.py  train.py  utils.py
CNN/tests/: test_checkpoint.py  test_data.py  test_model.py  test_smoke.py
RNN_LSTM_GRU/: .gitignore  README.md  environment.yml  pyproject.toml
RNN_LSTM_GRU/common/: __init__.py  data.py  generation.py  gradcheck.py  metrics.py  modeling.py  seed.py  training.py
RNN_LSTM_GRU/configs/: char_lm_debug.yaml  char_lm_full.yaml  delayed_recall.yaml
RNN_LSTM_GRU/data/: README.md
RNN_LSTM_GRU/exercises/: README.md  __init__.py
RNN_LSTM_GRU/exercises/gru/: __init__.py  language_model.py  numpy_impl.py  torch_impl.py
RNN_LSTM_GRU/gru/: README.md  __init__.py  experiments.py  language_model.py  numpy_impl.py  prompts.md  torch_impl.py
RNN_LSTM_GRU/lstm/: README.md  __init__.py  experiments.py  language_model.py  numpy_impl.py  prompts.md  torch_impl.py
RNN_LSTM_GRU/notebooks/: 00_math_and_gradcheck.ipynb  01_vanilla_gradient_flow.ipynb  02_lstm_memory_path.ipynb  03_gru_gate_analysis.ipynb  04_model_comparison.ipynb  05_vanilla_rnn_core.ipynb  06_lstm_core.ipynb  07_gru_core.ipynb
RNN_LSTM_GRU/scripts/: __init__.py  compare_models.py  download_corpus.py  evaluate.py  train.py
RNN_LSTM_GRU/vanilla_rnn/: README.md  __init__.py  experiments.py  language_model.py  numpy_impl.py  prompts.md  torch_impl.py
(+29 files in other folders)
