[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-lenet-cnn"
version = "1.0.0"
description = "A complete LeNet-style CNN training and inference project for MNIST"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.6,<3",
  "torchvision>=0.21,<1",
  "matplotlib>=3.9,<4",
  "Pillow>=11,<13",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
include = ["cnn*"]

